# ref-lect

./: .gitignore  AUTHORS  BUGS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac
data/: Makefile.am  erawrim-ctl.1  erawrim.1  org.rfid.Mirror.conf  org.rfid.Mirror.service.in  pam_reflect.8  ref-lect.1  reflect_logo.xcf  reflectd.1
debian/: .gitignore  changelog  control  docs  erawrim.install  reflect.install  reflectd.install  watch
doc/: protocol.md
erawrim/: Makefile.am  erawrim  erawrim-ctl
erawrim/examples/: Makefile.am  endroit.sh.in  envers.sh.in  pose.sh.in  retire.sh.in
pam_mir-ror/: Makefile.am  check_token.c  mirror.c  mirror.h  pam_mir-ror.c  test_check_token.c
pam_ref-lect/: Makefile.am  check_token.c  mirror.c  mirror.h  pam_ref-lect.c  pam_reflect_enroll.sh  pam_utils.c  pam_utils.h  wait_token.c
src/: .gitignore  EventType.vala  EventTypeParser.vala  Makefile.am  MirrorDevice.vala  mir-ror.c  mir-ror.vapi  ref-lect.vala  reflectd.vala
tools/: Makefile.am  mirror_get_full_state.sh  mirror_monitor.sh
